# netcdfpp

./: .clang-format  CMakeLists.txt  README.md  netcdfpp.cmake
.github/workflows/: ci.yml  pages.yml
docs/: Doxyfile.in  copying.md  index.md  quickstart.md  types.md
include/: netcdfpp.h
tests/: test.cdl  test_include_self_contained.cpp  test_netcdfpp.cpp
